# woody

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
PRPs/: 01-foundation-scaffolding.md  02-import-pdf-viewer.md  03-ocr-gemini.md  04-dossiers-pipeline-ocr.md  05-editeur-dossier.md  06-integration-fabric.md  07-calcul-generation-excel.md  08-dashboard.md  09-migration-n8n-webhooks.md  10-fix-fabric-auth.md
PRPs/templates/: prp_base.md
agent_docs/: code_patterns.md  project_brief.md  tech_stack.md  testing.md
docs/: AutomatisationN8N.json  EntraID_Configuration.txt
src/: App.tsx  routes.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/keys/: woody.key.pub
src-tauri/src/: lib.rs  main.rs
src/assets/: TEMPLATE_CV.xlsx
src/components/: UpdateDialog.tsx
src/hooks/: useFabricSyncScheduler.ts
src/lib/: dashboard-utils.ts  env.ts  utils.test.ts
src/pages/: ATraiterPage.tsx  AnomaliesPage.tsx  CloturesPage.tsx  CreateDossiersPage.tsx  DashboardPage.tsx  DeclarationsPage.tsx  EditDossierPage.tsx  EditDossiersPage.tsx  GeneresPage.tsx  ImportDocumentsPage.tsx  ImportPage.tsx  SettingsPage.tsx
src/services/: calculation.engine.test.ts  calculation.engine.ts  database.service.ts  excel-generator.service.ts  fabric.service.test.ts  fabric.service.ts  n8n.service.test.ts  n8n.service.ts  ocr.orchestrator.ts  pdf-generator.service.ts  (+3 more)
(+49 files in other folders)
