[package]
name = "woody"
version = "0.1.5"
description = "Woody - Gestion des Comptes de Vente"
authors = ["GRLOG"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "woody_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = "0.12"
tokio = { version = "1", features = ["net"] }
